# hid-velocityone-multi-shift

./: .gitignore  README.md  hid.pyi  hid_velocityone_multi_shift.py  pyproject.toml
